#87 lirp-fx FxProperty Scalar Delegates